Upgrade to Java 21 Fix Bugs Don't use constant format Use String Templates Precalculate Loop Data Track and Downloader.Event are now records Shift Loop Data Detection to LoopFinder