@@ -6,7 +6,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 
 public class Downloader {
     public static final int STARTED = 1;
@@ -27,16 +27,16 @@ public class Downloader {
 
     public static File download(String url, File file, EventListener listener) throws IOException {
         long startingTime = System.currentTimeMillis();
-        long bytesRead = 0;
+        int bytesRead = 0;
         int len;
-        try (InputStream input = new URL(url).openStream()) {
+        try (InputStream input = URI.create(url).toURL().openStream()) {
             try (FileOutputStream output = new FileOutputStream(file)) {
                 byte[] buffer = new byte[4096];
                 while ((len = input.read(buffer)) > 0) {
                     bytesRead += len;
                     output.write(buffer, 0, len);
                     long timeTaken = System.currentTimeMillis() - startingTime;
-                    long speed = bytesRead * 100 / timeTaken;
+                    long speed = bytesRead * 100L / timeTaken;
                     if (listener != null) {
                         listener.progress(new Event(file, startingTime, timeTaken, len, bytesRead, speed, bytesRead == len ? STARTED : IN_PROGRESS));
                     }
@@ -44,7 +44,7 @@ public class Downloader {
             }
         }
         long timeTaken = System.currentTimeMillis() - startingTime;
-        long speed = bytesRead * 100 / timeTaken;
+        long speed = bytesRead * 100L / timeTaken;
         if (listener != null) {
             listener.progress(new Event(file, startingTime, timeTaken, len, bytesRead, speed, DONE));
         }
@@ -56,23 +56,14 @@ public class Downloader {
         void progress(Event event);
     }
 
-    public static class Event {
-        public final File file;
-        public final long startingTime;
-        public final long timeTaken;
-        public final long bytesRead;
-        public final long totalBytesRead;
-        public final double speed;
-        public final int type;
-
-        public Event(File file, long startingTime, long timeTaken, long bytesRead, long totalBytesRead, double speed, int type) {
-            this.file = file;
-            this.startingTime = startingTime;
-            this.timeTaken = timeTaken;
-            this.bytesRead = bytesRead;
-            this.totalBytesRead = totalBytesRead;
-            this.speed = speed;
-            this.type = type;
-        }
+    public record Event(
+        File file,
+        long startingTime,
+        long timeTaken,
+        int bytesRead,
+        long totalBytesRead,
+        double speed,
+        int type
+    ) {
     }
 }
